[project]
name = "uiucprescon.tripwire"
version = "0.3.2.dev0"
requires-python = ">= 3.11"
maintainers = [
    { name="Henry Borchers", email="hborcher@illinois.edu" }
]
authors = [
    {name="University Library at The University of Illinois at Urbana Champaign: Preservation Services", email="prescons@library.illinois.edu"}
]
license = "NCSA"
license-files = ["LICENSE"]
description = "Tripwire is a tool for automating digital preservation tasks specifically for AV."
readme = { file= "README.md", content-type="text/markdown" }
dependencies = [
    "tqdm"
]
[project.urls]
project = "https://github.com/UIUCLibrary/tripwire"
documentation = "https://uiuclibrary.github.io/tripwire/"

[project.scripts]
tripwire = "uiucprescon.tripwire.main:main"

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["uiucprescon.tripwire"]
package-dir = {"" = "src"}
zip-safe = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
line-length = 79
extend-exclude = ["tests"]

[tool.ruff.lint]
extend-select = [
    "D",
    "E301",
    "E302",
    "E303",
    "E501",
    "W293",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
envlist = ["3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["{env_bin_dir}{/}pytest"]]
deps = ["-r requirements-dev.txt"]

[tool.mypy]
mypy_path = "src"