[project]
name = "uiucprescon.tripwire"
version = "0.3.6"
requires-python = ">= 3.11"
maintainers = [
    { name="Henry Borchers", email="hborcher@illinois.edu" }
]
authors = [
    {name="University Library at The University of Illinois at Urbana Champaign: Preservation Services", email="prescons@library.illinois.edu"}
]
license = "NCSA"
license-files = ["LICENSE"]
description = "Tripwire is a tool for automating digital preservation tasks specifically for AV."
readme = { file= "README.md", content-type="text/markdown" }
dependencies = [
    "argcomplete",
    "pymediainfo",
    "tqdm",
    "uiucprescon.pymediaconch",
]
[project.urls]
project = "https://github.com/UIUCLibrary/tripwire"
documentation = "https://uiuclibrary.github.io/tripwire/"

[project.scripts]
tripwire = "uiucprescon.tripwire.main:main"

[dependency-groups]
test = ["pytest>7", "coverage"]
docs = ["sphinx"]
dev = [
    "lxml",
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
    "tox",
    "types-tqdm",
    {include-group = "docs"},
    {include-group = "test"},
    ]
deploy = ["twine"]
ci = ["pysonar", {include-group = "dev"}]

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["uiucprescon.tripwire"]
package-dir = {"" = "src"}
zip-safe = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
pre_bump_hooks = [
    "uv lock"
]

[tool.ruff]
line-length = 79
extend-exclude = ["tests"]

[tool.ruff.lint]
extend-select = [
    "D",
    "E301",
    "E302",
    "E303",
    "E501",
    "W293",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
envlist = ["3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["{env_bin_dir}{/}pytest"]]
dependency_groups = ['test']

[tool.mypy]
mypy_path = "src"


[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true


[[tool.uv.index]]
name = "uiuc_prescon_python"
url = "https://nexus.library.illinois.edu/repository/uiuc_prescon_python/simple"
explicit = true

[tool.uv.sources]
"uiucprescon.pymediaconch" = {index="uiuc_prescon_python"}
