[project]
name = "uiucprescon.tripwire"
version = "0.3.7"
requires-python = ">= 3.11"
maintainers = [
    { name="Henry Borchers", email="hborcher@illinois.edu" }
]
authors = [
    {name="University Library at The University of Illinois at Urbana Champaign: Preservation Services", email="prescons@library.illinois.edu"}
]
license = "NCSA"
license-files = ["LICENSE"]
description = "Tripwire is a tool for automating digital preservation tasks specifically for AV."
readme = { file= "README.md", content-type="text/markdown" }
dependencies = [
    "argcomplete",
    "pymediainfo",
    "tqdm",
    "uiucprescon.pymediaconch",
]
[project.urls]
project = "https://github.com/UIUCLibrary/tripwire"
documentation = "https://uiuclibrary.github.io/tripwire/"

[project.scripts]
tripwire = "uiucprescon.tripwire.main:main"

[dependency-groups]
test = ["pytest>7"]
docs = ["sphinx"]
audit-dependencies = ['uv-secure']
type-checking = ["mypy", "types-tqdm"]
lint = ["ruff"]
tox = ["tox"]
tox-uv = [
    {include-group = "tox"},
    "tox-uv-bare"
]
dev = [
    "lxml",
    "pre-commit",
    "pytest",
    {include-group = "audit-dependencies"},
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "tox"},
    {include-group = "type-checking"},
    "coverage"
    ]
deploy = ["twine"]
ci = ["pysonar", {include-group = "dev"}]
standalone-packaging = ['PyInstaller', 'cmake']

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["uiucprescon.tripwire"]
package-dir = {"" = "src"}
zip-safe = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
pre_bump_hooks = [
    "uv lock"
]

[tool.ruff]
line-length = 79
extend-exclude = ["tests"]
include = ["src/**/*.py"]

[tool.ruff.lint]
extend-select = [
    "D",
    "E301",
    "E302",
    "E303",
    "E501",
    "W293",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
envlist = ["3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["{env_bin_dir}{/}pytest"]]
dependency_groups = ['test']

[tool.tox.env.type-checking]
description = "Run mypy type checking"
dependency_groups = ['type-checking']
commands = [["{env_bin_dir}{/}mypy", "-p", "uiucprescon.tripwire"]]

[tool.tox.env.lint]
description = "Run ruff linting"
dependency_groups = ['lint']
skip_install = true
commands = [["{env_bin_dir}{/}ruff", "check"]]

[tool.tox.env.docs]
description = "Build documentation"
dependency_groups = ['docs']
commands = [
    [
        "{env_bin_dir}{/}sphinx-build", "docs", "{temp_dir}{/}build{/}docs",
        "--fail-on-warning",
        "--keep-going",
        "--write-all",
        "--fresh-env"
    ]
]

[tool.tox.env.docs-linkcheck]
description = "Build documentation"
dependency_groups = ['docs']
commands = [
    [
        "{env_bin_dir}{/}sphinx-build", "docs", "{temp_dir}{/}build{/}docs-link-check",
        "--fail-on-warning",
        "--keep-going",
        "--write-all",
        "--fresh-env",
        "--builder=linkcheck"
    ]
]

[tool.mypy]
mypy_path = "src"


[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true


[[tool.uv.index]]
name = "uiuc_prescon_python"
url = "https://nexus.library.illinois.edu/repository/uiuc_prescon_python/simple"
explicit = true

[tool.uv.sources]
"uiucprescon.pymediaconch" = {index="uiuc_prescon_python"}
